# lustre-sally

./: .gitignore  .gitmodules  .gitmodules.orig  ChangeLog.md  Dockerfile  README.md  cabal.project  lustre-sally  lustre-sally.cabal  run-one-test  stack.yaml
.github/workflows/: build.yml
build-utils/: find-unknown-tests  generate-ui.hs  prep-docker-build  run-docker  run-one-test
example/: Makefile  farmer.css  farmer.html  farmer.lus  farmer.md  lustre.lua
sally-weak/: README  bridge_and_torch.lus  tuple.lus
src/: LSPanic.hs  Log.hs  Lustre.hs  LustreNil.hs  LustreNoNil.hs  Main.hs  Main.hs.orig  ModelState.hs  Report.hs  Sally.hs  SallyProgress.hs  SaveUI.hs  TransitionSystem.hs
src/Report/: CallTree.hs  JSON.hs  XML.hs
src/UI/: Index.hs  Jquery.hs  Style.hs  Ui.hs
tests/: 1.lus  T001.lus  T001.lus.stdout  Test0.hs  Test1.hs
tests/jkind/: 8-peg.lus.settings  8-peg.lus.stdout  8-slide-impossible.lus.settings  8-slide-impossible.lus.stdout  8-slide.lus.settings  8-slide.lus.stdout  README  active_standby.kind.lus.stdout  array.lus.fails  array.lus.stdout  bridge_and_torch.lus.settings  bridge_and_torch.lus.stdout  cast.lus.stdout  condact.lus.fails  condact.lus.stdout  drivetrain.lus.stdout  farmer.lus.stdout  inlined_mode_logic.kind.lus.stdout  integrate.lus.stdout  inv_gen.lus.stdout  microwave.kind.lus.stdout  microwave.mcdc.lus.stdout  missionaries-and-cannibals.lus.fails  missionaries-and-cannibals.lus.settings  missionaries-and-cannibals.lus.stdout  mode_logic.kind.lus.stdout  pid.lus.settings  pid.lus.stdout  pilot_flying.lus.stdout  pre.lus.stdout  records.lus.fails  records.lus.stdout  smooth.lus.stdout  submode.lus.stdout  subnode-properties.lus.stdout  tower-of-hanoi.lus.stdout  triangle-peg-impossible.lus.stdout  triplex_voter.lus.stdout  tuple.lus.settings  tuple.lus.stdout  (+6 more)
tests/jkind-sally/: 8-peg.lus  8-peg.lus.settings  8-peg.lus.stdout  8-slide-impossible.lus  8-slide-impossible.lus.settings  8-slide-impossible.lus.stdout  active_standby.kind.lus  active_standby.kind.lus.stdout  bridge_and_torch.lus  bridge_and_torch.lus.settings  bridge_and_torch.lus.stdout  inlined_mode_logic.kind.lus  inlined_mode_logic.kind.lus.stdout  inv_gen.lus  inv_gen.lus.stdout  microwave.kind.lus  microwave.kind.lus.lus  microwave.kind.lus.stdout
tests/jkind/hard/: 8-peg.lus.stdout  8-slide-impossible-ints.lus.stdout  active_standby.kind.lus.stdout  array.lus.stdout  bridge_and_torch.lus.stdout  cast.lus.stdout  condact.lus.stdout  drivetrain.lus.stdout  farmer.lus.stdout  inlined_mode_logic.kind.lus.stdout  integrate.lus.stdout  inv_gen.lus.stdout  microwave.kind.lus.stdout  missionaries-and-cannibals.lus.stdout  mode_logic.kind.lus.stdout  pid.lus.stdout  pilot_flying.lus.stdout  pre.lus.stdout  records.lus.stdout  smooth.lus.stdout  submode.lus.stdout  subnode-properties.lus.stdout  tower-of-hanoi.lus.stdout  triangle-peg-1.lus.stdout  triangle-peg-2.lus.stdout  triangle-peg-impossible.lus.stdout  triplex_voter.lus.stdout  turing.lus.stdout  uf_complex.lus.stdout  uf_enum.lus.stdout  uf_nullary.lus.stdout  uf_simple.lus.stdout  variety.lus.stdout
tests/jkind/ivc/: agree1.lus.stdout  agree2.lus.stdout  agree3.lus.stdout  agree4.lus.stdout  agree5.lus.stdout  agree6.lus.stdout  microwave.lus.stdout  simple1.lus.stdout  simple2.lus.stdout  simple3.lus.stdout
tests/jkind/nonlinear/: gauss.lus.stdout
tests/jkind/realizability/: compound.lus.stdout  counter.lus.stdout  min_max.lus.stdout  poster1.lus.stdout  poster2.lus.stdout  poster3.lus.stdout  reduce.lus.stdout  requires_lemma.lus.stdout  unknown_real1.lus.stdout  unknown_real2.lus.stdout
ui/: index.html  style.css  ui.js
