name:                lustre-sally
version:             0.1.0.0
synopsis:            Compile Lustre to Sally
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lustre-sally
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall

  other-modules:       TransitionSystem,
                       Sally,
                       Log,
                       Lustre,
                       LSPanic

  build-depends:       base >=4.11 && <4.13,
                       containers,
                       text,
                       ansi-terminal,
                       panic,
                       process,
                       directory,
                       simple-smt >= 0.9.3,
                       simple-get-opt,
                       pretty-show,
                       pretty,
                       ansi-wl-pprint,
                       language-lustre


