name:                lustre-sally
version:             0.1.0.0
synopsis:            Compile Lustre to Sally
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lustre-sally
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall

  other-modules:       TransitionSystem,
                       Sally,
                       SallyProgress,
                       Log,
                       Lustre,
                       Report,
                       Report.XML,
                       Report.JSON,
                       Report.CallTree,
                       LSPanic,
                       SaveUI,
                       UI.Index,
                       UI.Ui,
                       UI.Style,
                       UI.Jquery,
                       Paths_lustre_sally

  build-depends:       base >=4.11 && <4.14,
                       containers,
                       bytestring,
                       text,
                       ansi-terminal,
                       panic,
                       process,
                       directory,
                       simple-smt >= 0.9.4,
                       simple-get-opt >= 0.3,
                       pretty-show,
                       pretty,
                       time,
                       filepath,
                       config-value,
                       config-value-getopt,
                       raw-strings-qq,
                       language-lustre,
                       xml

executable generate-ui
  hs-source-dirs:     build-utils
  main-is:            generate-ui.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:      base, filepath, directory
